--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "@types/three": "^0.162.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "core-js": "^3.23.3",
     "framer-motion": "^11.0.25",
     "lucide-react": "^0.365.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "^14.2.0",
+    "next": "^14.2.21",
     "next-themes": "^0.3.0",
-    "portfolio": "file:",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -34,7 +34,8 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.162.0",
     "three-globe": "^2.31.0",
-    "vercel": "^33.5.1"
+    "uuid": "^7.0.0",
+    "vercel": "^32.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
