--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.21",
     "next-themes": "^0.3.0",
+    "portfolio": "file:",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
